[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/scripts/player/player_hud.gd" type="Script" id=1]

[node name="PlayerHud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="AmmoCounter" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -65.0
margin_top = -18.0

[node name="AmmoCounterLabel" type="Label" parent="AmmoCounter"]
margin_top = 2.0
margin_right = 17.0
margin_bottom = 16.0
text = "A: "

[node name="AmmoCounterValue" type="Label" parent="AmmoCounter"]
margin_left = 21.0
margin_top = 2.0
margin_right = 58.0
margin_bottom = 16.0
text = "10/20"
